# learning_rust

0_helloworld/: main.rs
1_hellocargo/src/: main.rs
2_gameing/: Cargo.toml
2_gameing/src/: main.rs
3_quickmaths/: Cargo.toml
3_quickmaths/image_buffer/src/: lib.rs
3_quickmaths/src/: main.rs
3_quickmaths/swizz_macro/: Cargo.toml
3_quickmaths/swizz_macro/src/: lib.rs
3_quickmaths/vector_macro/src/: lib.rs
3_quickmaths/vector_math/: Cargo.toml
3_quickmaths/vector_math/src/: lib.rs
4_webmaths/: Cargo.toml  index.htm
4_webmaths/image_buffer/: Cargo.toml
4_webmaths/image_buffer/src/: lib.rs
4_webmaths/obj_reader/: Cargo.toml
4_webmaths/obj_reader/src/: lib.rs
4_webmaths/src/: lib.rs
4_webmaths/vector_macro/: Cargo.toml
4_webmaths/vector_macro/src/: lib.rs
4_webmaths/vector_math/src/: lib.rs
