[package]
name = "quickmaths"
version = "0.1.0"
edition = "2021"

[dependencies]
vector_math = { path = "vector_math" }
image_buffer = { path = "image_buffer" }
obj_reader = { path = "obj_reader" }
rand = "0.8.5"
crossbeam = "0.8.2"
clap = { version = "3.2.15", features = ["derive"] }
lazy_static = "1.4.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]

